--- a/MiniChallenge8/Storyboards/Base.lproj/Main.storyboard
+++ b/MiniChallenge8/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.AppleTV.Storyboard" version="3.0" toolsVersion="14109" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="S8v-qt-fMu">
+<document type="com.apple.InterfaceBuilder.AppleTV.Storyboard" version="3.0" toolsVersion="14113" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="S8v-qt-fMu">
     <device id="appleTV" orientation="landscape">
         <adaptation id="light"/>
     </device>
@@ -17,66 +17,10 @@
         </array>
     </customFonts>
     <scenes>
-        <!--Connection View Controller-->
-        <scene sceneID="UIz-UG-D57">
-            <objects>
-                <viewController id="0em-89-gFv" customClass="ConnectionViewController" customModule="MiniChallenge8" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="tgh-Pa-mhw"/>
-                        <viewControllerLayoutGuide type="bottom" id="EJy-zv-Tt7"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="aIG-Xa-KCf">
-                        <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="34G-Hd-AK1">
-                                <rect key="frame" x="0.0" y="0.0" width="1948" height="285"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="53"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name: " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NAr-nE-379">
-                                <rect key="frame" x="-14" y="293" width="1948" height="147"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="53"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Avatar:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e8s-Hm-C0S">
-                                <rect key="frame" x="-14" y="498" width="1948" height="137"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="53"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IJq-wt-Vxj">
-                                <rect key="frame" x="794" y="880" width="334" height="86"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
-                                <state key="normal" title="Waiting screen"/>
-                                <connections>
-                                    <action selector="didClickWaitingScreen:" destination="0em-89-gFv" eventType="primaryActionTriggered" id="Nfp-5k-reg"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="YdG-ec-C8Z"/>
-                    </view>
-                    <connections>
-                        <outlet property="avatar" destination="e8s-Hm-C0S" id="ahJ-g6-N7y"/>
-                        <outlet property="name" destination="NAr-nE-379" id="eQa-Ja-emi"/>
-                        <outlet property="testingLabel" destination="34G-Hd-AK1" id="C0a-xA-ko3"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="QQJ-ch-WLg" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="76" y="-423"/>
-        </scene>
-        <!--View Controller-->
+        <!--Connected Players View Controller-->
         <scene sceneID="uZk-n8-pfw">
             <objects>
-                <viewController id="S8v-qt-fMu" sceneMemberID="viewController">
+                <viewController id="S8v-qt-fMu" customClass="ConnectedPlayersViewController" customModule="MiniChallenge8" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="kHO-zW-wYu"/>
                         <viewControllerLayoutGuide type="bottom" id="Uve-DU-KCD"/>
@@ -88,14 +32,8 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="homeScreen" translatesAutoresizingMaskIntoConstraints="NO" id="2OP-HR-VUO">
                                 <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
                             </imageView>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IpL-Us-5QP">
-                                <rect key="frame" x="192" y="405" width="1536" height="270"/>
-                                <connections>
-                                    <segue destination="YVf-9q-N9t" kind="embed" id="BKc-RN-ROi"/>
-                                </connections>
-                            </containerView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iCY-Gp-3P7">
-                                <rect key="frame" x="1406" y="891" width="322" height="76"/>
+                                <rect key="frame" x="1406" y="895" width="322" height="76"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="iCY-Gp-3P7" secondAttribute="height" multiplier="195:46" id="WR4-cI-LGC"/>
@@ -107,69 +45,57 @@
                                 </state>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="bottom" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Use o app no iPhone para entrar !" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="qfR-pN-1FO">
-                                <rect key="frame" x="192" y="891" width="1536" height="76"/>
+                                <rect key="frame" x="192" y="895" width="574" height="76"/>
                                 <fontDescription key="fontDescription" name="PricedownBl-Regular" family="Pricedown" pointSize="38"/>
                                 <color key="textColor" red="1" green="0.83921568629999999" blue="0.39652104329999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <collectionView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" scrollEnabled="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="bA1-jR-WIH">
+                                <rect key="frame" x="192" y="378" width="1536" height="324"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="19d-cM-Y4O">
+                                    <size key="itemSize" width="251" height="264"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="connectedPlayersCollectionViewCell" reuseIdentifier="connectedPlayersCollectionViewCell" id="av9-Tn-JaL" customClass="ConnectedPlayersCollectionViewCell" customModule="MiniChallenge8" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="30" width="251" height="264"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="251" height="264"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                        <size key="customSize" width="251" height="264"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <constraints>
                             <constraint firstItem="2OP-HR-VUO" firstAttribute="centerY" secondItem="26V-6g-DTC" secondAttribute="centerY" id="4bv-Dm-IxY"/>
                             <constraint firstItem="iCY-Gp-3P7" firstAttribute="height" secondItem="2OP-HR-VUO" secondAttribute="height" multiplier="0.07" id="7xG-Mp-9QA"/>
-                            <constraint firstItem="qfR-pN-1FO" firstAttribute="width" secondItem="IpL-Us-5QP" secondAttribute="width" id="8D4-yB-naD"/>
-                            <constraint firstItem="iCY-Gp-3P7" firstAttribute="trailing" secondItem="IpL-Us-5QP" secondAttribute="trailing" id="AXY-n4-OH0"/>
-                            <constraint firstItem="IpL-Us-5QP" firstAttribute="centerY" secondItem="26V-6g-DTC" secondAttribute="centerY" id="Fcc-zb-ql2"/>
+                            <constraint firstItem="iCY-Gp-3P7" firstAttribute="baseline" secondItem="bA1-jR-WIH" secondAttribute="baseline" multiplier="1.35" id="ByW-gT-SvD"/>
                             <constraint firstItem="2OP-HR-VUO" firstAttribute="height" secondItem="5ac-xg-ZMV" secondAttribute="height" id="Feb-yp-yPB"/>
                             <constraint firstItem="2OP-HR-VUO" firstAttribute="width" secondItem="5ac-xg-ZMV" secondAttribute="width" id="HDr-Jm-hTd"/>
-                            <constraint firstItem="IpL-Us-5QP" firstAttribute="height" secondItem="5ac-xg-ZMV" secondAttribute="height" multiplier="0.25" id="JzJ-6G-RyQ"/>
-                            <constraint firstItem="IpL-Us-5QP" firstAttribute="width" secondItem="5ac-xg-ZMV" secondAttribute="width" multiplier="0.8" id="LzC-Pc-n53"/>
+                            <constraint firstItem="bA1-jR-WIH" firstAttribute="width" secondItem="5ac-xg-ZMV" secondAttribute="width" multiplier="0.8" id="LtM-kC-mZi"/>
+                            <constraint firstItem="bA1-jR-WIH" firstAttribute="centerX" secondItem="26V-6g-DTC" secondAttribute="centerX" id="M5H-Pu-5p3"/>
+                            <constraint firstItem="qfR-pN-1FO" firstAttribute="leading" secondItem="bA1-jR-WIH" secondAttribute="leading" id="NVI-bi-Xwj"/>
                             <constraint firstItem="2OP-HR-VUO" firstAttribute="centerX" secondItem="26V-6g-DTC" secondAttribute="centerX" id="Qdx-xG-Czp"/>
-                            <constraint firstItem="iCY-Gp-3P7" firstAttribute="baseline" secondItem="IpL-Us-5QP" secondAttribute="baseline" multiplier="1.4" id="Wfh-cT-CdS"/>
-                            <constraint firstItem="qfR-pN-1FO" firstAttribute="leading" secondItem="IpL-Us-5QP" secondAttribute="leading" id="ZZF-RO-8js"/>
+                            <constraint firstItem="bA1-jR-WIH" firstAttribute="height" secondItem="5ac-xg-ZMV" secondAttribute="height" multiplier="0.3" id="Wq3-aH-vK6"/>
+                            <constraint firstItem="bA1-jR-WIH" firstAttribute="centerY" secondItem="26V-6g-DTC" secondAttribute="centerY" id="ZYt-Dt-Wzj"/>
                             <constraint firstItem="qfR-pN-1FO" firstAttribute="centerY" secondItem="iCY-Gp-3P7" secondAttribute="centerY" id="bAU-cZ-Be6"/>
                             <constraint firstItem="qfR-pN-1FO" firstAttribute="height" secondItem="2OP-HR-VUO" secondAttribute="height" multiplier="0.07" id="dZu-Mc-4Jg"/>
-                            <constraint firstItem="IpL-Us-5QP" firstAttribute="centerX" secondItem="26V-6g-DTC" secondAttribute="centerX" id="qe9-8T-1qo"/>
+                            <constraint firstItem="iCY-Gp-3P7" firstAttribute="trailing" secondItem="bA1-jR-WIH" secondAttribute="trailing" id="s4M-a8-bmt"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="26V-6g-DTC"/>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="bA1-jR-WIH" id="UZt-mq-Vnf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IET-HF-x7G" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="76" y="1207"/>
-        </scene>
-        <!--Connected Players Collection View Controller-->
-        <scene sceneID="UWq-Xn-sI7">
-            <objects>
-                <collectionViewController id="YVf-9q-N9t" customClass="ConnectedPlayersCollectionViewController" customModule="MiniChallenge8" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" scrollEnabled="NO" dataMode="prototypes" id="rFw-gP-iBE">
-                        <rect key="frame" x="0.0" y="0.0" width="1536" height="270"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="oQO-FJ-4ss">
-                            <size key="itemSize" width="251" height="264"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                        <cells>
-                            <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" restorationIdentifier="connectedPlayersCollectionViewCell" reuseIdentifier="connectedPlayersCollectionViewCell" id="Dwp-Kh-bZg" customClass="ConnectedPlayersCollectionViewCell" customModule="MiniChallenge8" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="3" width="251" height="264"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                    <rect key="frame" x="0.0" y="0.0" width="251" height="264"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </view>
-                                <size key="customSize" width="251" height="264"/>
-                            </collectionViewCell>
-                        </cells>
-                        <connections>
-                            <outlet property="dataSource" destination="YVf-9q-N9t" id="5PZ-za-MFq"/>
-                            <outlet property="delegate" destination="YVf-9q-N9t" id="8MQ-7V-cGh"/>
-                        </connections>
-                    </collectionView>
-                </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="5OY-Oq-GcL" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="63" y="2486"/>
         </scene>
         <!--Pre Battle View Controller-->
         <scene sceneID="ohO-w5-pa7">
